--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Página Azure Static Web Apps</title>
+    <title>Minha Página Azure Static Web Apps 100</title>
 </head>
 <body>
     <h1>Bem-vindo ao Azure Static Web Apps</h1>
